# vioux

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  rustfmt.toml  vioux.pyi
.devcontainer/: devcontainer.json
.github/workflows/: cargo.yml  ci.yml
examples/: gain_audio.py  rotate_image.py
proto/: main.proto  placeholder.proto  vioux.proto
src/: export.rs  lib.rs  main.rs  render.rs  server.rs  store.rs
src/grpc/: client.py  client.rs  mod.rs  server.rs  utils.rs
src/schema/: mod.rs  placeholder.proto
src/ui/: mod.rs
src/utils/: processing.rs
tests/: audio.rs  image.rs
vioux_gui/: Cargo.toml
vioux_gui/src/: app.rs  main.rs
vioux_lib/: Cargo.toml  vioux.pyi
vioux_lib/proto/: main.proto
vioux_lib/src/: export.rs  lib.rs  store.rs
vioux_lib/src/grpc/: client.rs  mod.rs  server.rs  utils.rs
vioux_lib/tests/: audio.rs  image.rs
